<resources>
    <string name="app_name">LumiBricks</string>

<!--    Temporary-->
    <string name="brick_fake_amount">20</string>




    <string name="brick_amount">Daudzums</string>
    <string name="brick_sq_meters">Metri^2</string>
    <string name="brick_price">Cena</string>
    <string name="brick_size">Izmērs: 100x200(mm)</string>
    <string name="brick_height">Augstums: X(mm)</string>
    <string name="brick_quantity">Daudzums (gb)</string>
    <string name="brick_secondary_quantity">2. Šķira (gb): </string>
    <string name="brick_primary_quantity">1. Šķira: </string>
    <string name="brick_color">Krāsa: </string>
    <string name="order_brick">Pasūtīt </string>
    <string name="brick_order_address">Adrese </string>

        <!--    4. Option for brick in warehouse-->
    <string name="destroy_brick">Dzēst </string>
    <string name="sold_brick">Pārdot </string>
    <string name="produce_brick">Ražot </string>
    <string name="brick_2Class">2.Šķira</string>

    <string name="divider_bullet">•</string>
    <string name="brick_1Class">1.Šķira</string>
    <string name="brick_fence">Sētas</string>
    <string name="brick_boarder">Apmales</string>
    <string name="brick_cobble">Bruģis </string>
    <string name="header_filters">Filter</string>



    <string name="value_brick_types">Bruģa pilns nosaukums</string>
    <string name="value_brick_height">Biezums</string>
    <string name="value_brick_color">Krāsa</string>
    <string name="value_brick_lumi">Spīdums</string>
    <string name="value_brick_quality">Kvalitāte</string>
    <string name="brick_insert_amount">Ievadiet daudzumu</string>
    <string name="cancel">Atcelt</string>

    <string name="lumi_1">nav</string>
    <string name="lumi_2">Zaļš</string>
    <string name="lumi_3">Zils</string>

    <string name="height_1">80</string>
    <string name="height_2">50</string>
    <string name="height_3">60</string>
    <string name="height_4">70</string>
    <string name="height_5">150</string>
    <string name="users">lietotāji</string>
    <string name="setting">iestatījumi</string>
    <string name="euroTogether">Kopā</string>
    <string name="palettes">Paletes</string>
    <string name="transport">Transports</string>
    <string name="brick_order_price">Summa</string>
    <string name="lumi_order">Pasūtījums</string>
    <string name="brick_name">Bruģa nosaukums</string>
    <string name="brick_unit">unit</string>
    <string name="gb">gb</string>
    <string name="cliient">"Klients "</string>
    <string name="dialog_message_edit_address">Rediģēd adresi</string>
    <string name="dialog_title_edit_address">Addrese</string>
    <string name="dialog_message_edit_peron">Rediģēt klieentu</string>
    <string name="dialog_title_edit_peron">Klients</string>
    <string name="dialog_message_new_peron">Jaunais klieenta vārds</string>
    <string name="dialog_message_new_address">Jaunā adrese</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="dialog_message_group_item_pinned">Group item pinned! (group = %1$d)</string>
    <string name="dialog_message_child_item_pinned">Child item pinned! (group = %1$d, child = %2$d)</string>
    <string name="dialog_message_edit">Rediģēt</string>
    <string name="edititem">Rediģēt ierakstu</string>
    <string name="chooseItem">Ieraksta nosaukums</string>
    <string name="ok">Apstiprināt</string>

    <!--    <item>@string/value_brick_types</item>-->
<!--    If changed order in array(first 4 items), than need to change MainActivity.setBrickImage __else if(){}__ statement  -->
    <string-array name="brick_type">

        <item>Nast</item>
        <item>Prizma</item>
        <item>Asorti</item>
        <item>Mozaīka</item>
        <item>Nast-G</item>
        <item>Sigma-8</item>

        <item>TAVR(Kauls)</item>
        <item>Nast-8-puse</item>
        <item>Nast-8-mini</item>
        <item>Konuss-1</item>
        <item>Konuss-2</item>
        <item>Plāksne300x300</item>
        <item>Plāksne-400x500</item>
        <item>Plāksne-450x300</item>
        <item>Plāksne750x300</item>
        <item>Tekne</item>
        <item>Taktila-pump</item>
        <item>Taktila-line</item>

    </string-array>
    <!--        <item>Nast 6</item>-->
    <!--        <item>Prizma 6</item>-->
<!--    <item>@string/value_brick_color</item>-->

    <string-array name="brick_color">

        <item>Pelēks</item>
        <item>Zaļš</item>
        <item>Dzeltens</item>
        <item>Oranžš</item>
        <item>Sarkans</item>
        <item>Melns</item>
        <item>Brūns</item>
        <item>Balts</item>

    </string-array>

<!--    <item>@string/value_brick_lumi</item>-->
    <string-array name="brick_lumi">

        <item>@string/lumi_1</item>
        <item>@string/lumi_2</item>
        <item>@string/lumi_3</item>

    </string-array>

    <!--    <item>@string/value_brick_height</item>-->
    <string-array name="brick_height">
        <item>@string/height_1</item>
        <item>@string/height_2</item>
        <item>@string/height_3</item>
        <item>@string/height_4</item>
        <item>@string/height_5</item>
    </string-array>

    <string-array name="brick_height1">
        <item>@string/height_1</item>
        <item>@string/height_2</item>
        <item>@string/height_3</item>
    </string-array>

    <string-array name="brick_height2">
        <item>@string/height_3</item>
        <item>@string/height_4</item>
        <item>@string/height_5</item>
    </string-array>

    <string-array name="brick_height3">
        <item>@string/height_4</item>
        <item>@string/height_5</item>
    </string-array>

</resources>
