<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/list_item_cargo_bottom_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/container_palettes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">


            <TextView
                android:id="@+id/text_palettes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/palettes"
                android:layout_gravity="center|left"
                android:layout_marginRight="226dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:gravity="center"
                tools:ignore="RtlHardcoded" />


            <Button
                android:id="@+id/button_change_unit_palettes"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="28dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="196dp"
                android:padding="0dp"
                android:textSize="12dp"
                android:clickable="false"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/edit_text_brick_amount_palettes"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="134dp"
                android:hint="@string/brick_amount"
                android:inputType="number"
                android:padding="0dp"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/edit_text_brick_price_palettes"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="72dp"
                android:hint="@string/brick_price"
                android:inputType="numberDecimal"
                android:padding="0dp"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text_euro_together_palettes"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:padding="0dp"
                android:text="@string/euroTogether"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/container_transport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">


            <TextView
                android:id="@+id/text_transport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginRight="226dp"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:text="@string/transport"
                tools:ignore="RtlHardcoded" />


            <Button
                android:id="@+id/button_change_transport_unit"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="28dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="196dp"
                android:padding="0dp"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/edit_text_transport_amount"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="134dp"
                android:hint="@string/brick_amount"
                android:inputType="number"
                android:padding="0dp"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/edit_text_transport_price"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="72dp"
                android:hint="@string/brick_price"
                android:inputType="numberDecimal"
                android:padding="0dp"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/text_euro_together"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:padding="0dp"
                android:text="@string/euroTogether"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>